tests/semantic_errors/sasha13_3.tl
require "ifj21"

global name : function (integer)
function name1    (a : number) end

function main()
end

function name ()

main()
